1. 房間屬性控制由client端轉至server端

--- a/Plugins/WebHooks1.2/WebHooks1.2.csproj
+++ b/Plugins/WebHooks1.2/WebHooks1.2.csproj
@@ -81,6 +81,7 @@
     </Compile>
     <Compile Include="Actor.cs" />
     <Compile Include="BlackJack\BlackJackPlugin.cs" />
+    <Compile Include="PhotonHiv\GameParameter.cs" />
     <Compile Include="WebhooksRequest.cs" />
     <Compile Include="WebhooksResponse.cs" />
     <Compile Include="PluginFactory.cs" />
