--- a/Plugins/WebHooks1.2/WebHooks1.2.csproj
+++ b/Plugins/WebHooks1.2/WebHooks1.2.csproj
@@ -42,6 +42,9 @@
     <Reference Include="PlayFabAllSDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\PlayFabAllSDK.1.67.200311\lib\net45\PlayFabAllSDK.dll</HintPath>
     </Reference>
+    <Reference Include="Sigil, Version=4.7.0.0, Culture=neutral, PublicKeyToken=2d06c3494341c8ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sigil.4.7.0\lib\net45\Sigil.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections" />
     <Reference Include="System.Collections.Concurrent" />
@@ -57,6 +60,7 @@
     <Reference Include="System.Resources.ResourceManager" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.Extensions" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Text.Encoding" />
     <Reference Include="System.Threading" />
     <Reference Include="System.Threading.Tasks" />
@@ -70,14 +74,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Assets\Scripts\Game\BlackJack\Common\BlackJackConstant.cs">
-      <Link>BlackJack\BlackJackConstant.cs</Link>
+    <Compile Include="..\..\Assets\Scripts\LinkFile\BlackJack\BlackJackConstant.cs">
+      <Link>LinkFile\BlackJack\BlackJackConstant.cs</Link>
     </Compile>
-    <Compile Include="..\..\Assets\Scripts\Game\BlackJack\Common\BlackJackLogic.cs">
-      <Link>BlackJack\BlackJackLogic.cs</Link>
+    <Compile Include="..\..\Assets\Scripts\LinkFile\BlackJack\BlackJackLogic.cs">
+      <Link>LinkFile\BlackJack\BlackJackLogic.cs</Link>
     </Compile>
-    <Compile Include="..\..\Assets\Scripts\Game\BlackJack\Common\BlackJackModel.cs">
-      <Link>BlackJack\BlackJackModel.cs</Link>
+    <Compile Include="..\..\Assets\Scripts\LinkFile\BlackJack\BlackJackModel.cs">
+      <Link>LinkFile\BlackJack\BlackJackModel.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Assets\Scripts\LinkFile\BlackJack\BlackJackRoom.cs">
+      <Link>LinkFile\BlackJack\BlackJackRoom.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Assets\Scripts\LinkFile\Constant.cs">
+      <Link>LinkFile\Constant.cs</Link>
     </Compile>
     <Compile Include="Actor.cs" />
     <Compile Include="BlackJack\BlackJackPlugin.cs" />
